umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@chemdoodle_drawing1.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: invalid
category: invalid
molecule:
  success: false
  error:
    error_type: InvalidHeader
    message: Invalid header block at line 0
molecule_lenient:
  success: false
  error:
    error_type: InvalidHeader
    message: Invalid header block at line 0
extended_molecule:
  success: false
  error:
    error_type: InvalidHeader
    message: Invalid header block at line 0
extended_molecule_lenient:
  success: false
  error:
    error_type: InvalidHeader
    message: Invalid header block at line 0
